[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.5.1"
num = "0.4.0"
numwit = "0.1.0"
pretty_assertions = "1.3.0"
tap = "1.0.1"
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = { version = "0.2.11", features = [
    "trace",
], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
